# rtdl-quant1

./: .gitignore  README.md  colab_prepare.ipynb  colab_prepare.py  main.py  pyproject.toml  requirements.txt  run.sh  train_all.sh  train_model.sh
industry/: industry.csv
rtdl_quant/: __init__.py  main.py
rtdl_quant/backtest/: __init__.py  group_backtest.py  ic_analysis.py  neutralization.py
rtdl_quant/configs/: __init__.py  catboost.yaml  config.yaml  ft_transformer.yaml  mlp.yaml  resnet.yaml  xgboost.yaml
rtdl_quant/datasets/: __init__.py  alpha_dataset.py  prices_alpha158.py
rtdl_quant/experiments/: __init__.py  runner.py
rtdl_quant/metrics/: __init__.py  metrics.py
rtdl_quant/models/: __init__.py  mlp.py  resnet.py  wrappers.py
rtdl_quant/scripts/: __init__.py  build_prices_dataset.py  compare_models.py  export_alpha158_factors.py
rtdl_quant/trainer/: __init__.py  trainer.py
rtdl_quant/utils/: __init__.py  config.py  reproducibility.py
tests/: test_backtest.py  test_compare_models.py  test_dataset.py  test_experiment_runner.py  test_metrics.py  test_models.py  test_neutralization.py  test_prices_alpha158.py
