[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtdl-quant"
version = "0.1.0"
description = "RTDL-based quantitative equity research framework"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "pyarrow>=14",
  "PyYAML>=6,<7",
  "torch>=2.2,<3",
  "rtdl-revisiting-models>=0.0.2",
  "tensorboard>=2.15,<3",
  "tqdm>=4.66,<5",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
qlib = ["pyqlib>=0.9.6"]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
include = ["rtdl_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
